--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>The Coffee Corner</title>
     <link href="css/estilo.css" rel="stylesheet">
     <link rel="manifest" href="./manifest.json">
+    <meta name="MobileOptimized" content="width">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="shortcut icon" type="image/png" href="./img/SeminarioPWA.png">
+    <link rel="apple-touch-icon" type="image/png" href="./img/SeminarioPWA.png">
+    <link rel="apple-touch-startup-image" type="image/png" href="./img/SeminarioPWA.png">
     <script type="text/javascript">
         if ("serviceWorker" in navigator) {
             navigator.serviceWorker.register("sw.js");
